syntax = "proto3";

import "common.proto";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto  
option go_package = "./;microservice";

package service;

message CSATQuestionID {
    uint64 Value = 1;
}

message NewCSATQuestionInfo {
    string Content = 1;
    string Type = 2;
}

message NewCSATAnswerInfo {
    uint64 QuestionID = 1;
    uint64 Rating = 2;
}

message CSATQuestion {
    uint64 ID = 1;
    string Type = 2;
    string Content = 3;
}

message UpdatedCSATQuestion {
    string Content = 1;
    string Type = 2;
}

message CreateReturn {
    CSATQuestion question = 1;
    Error error = 2;
}

service CSATQuestionService {
	rpc CheckRating (NewCSATAnswerInfo) returns (Error) {}
    rpc Create (NewCSATQuestionInfo) returns (CreateReturn) {}
    rpc Update (UpdatedCSATQuestion) returns (Error) {}
    rpc Delete (CSATQuestionID) returns (Error) {}
}
