syntax = "proto3";
package csat_microservice;

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto  
option go_package = "./;csat_microservice";

enum ErrorCode {
	OK = 0;
	COULD_NOT_BUILD_QUERY = 1;
}

message NewCSATAnswer {
	uint64 UserID = 1;
	uint64 QuestionID = 2;
	uint64 Rating = 3;
}

message CreateRequest {
	string RequestID = 1;
	NewCSATAnswer Value = 2;
}

message CreateResponse {
	ErrorCode Code = 1;
}

service CSATAnswerService {
	rpc Create (CreateRequest) returns (CreateResponse) {}
}