syntax = "proto3";

import "google/protobuf/empty.proto";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto  
option go_package = "./;csat_microservice";

enum ErrorCode {
    OK = 0;
    COULD_NOT_BUILD_QUERY = 1;
    COULD_NOT_CREATE_QUESTION = 2;
    COULD_NOT_GET_QUESTIONS = 3;
    COULD_NOT_GET_QUESTION_TYPE = 4;
    QUESTION_NOT_UPDATED = 5;
    QUESTION_NOT_DELETED = 6;
    ANSWER_RATING_TOO_BIG = 7;
}

message CSATQuestionID {
    uint64 Value = 1;
}

message NewCSATQuestionInfo {
    string Content = 1;
    string Type = 2;
}

message NewCSATAnswerInfo {
    uint64 QuestionID = 1;
    uint64 Rating = 2;
}

message CSATQuestionFull {
    uint64 ID = 1;
    string Type = 2;
    string Content = 3;
}

message UpdatedCSATQuestionInfo {
    uint64 ID = 1;
    string Content = 2;
    string Type = 3;
}

message AllQuestionStats {
    repeated CSATQuestionFull Questions = 1;
}

message RatingStats {
	uint64 Rating = 1;
	uint64 Count = 2;
	uint64 Average = 3;
}

message QuestionWithStats {
	uint64 ID = 1;
	string Content = 2;
	string Type = 3;
	repeated RatingStats Stats = 4;
}

message AllQuestionsWithStats {
    repeated QuestionWithStats Questions = 1;
}

message CheckRatingResponse {
    ErrorCode Code = 1;
}

message GetAllResponse {
    ErrorCode Code = 1;
    AllQuestionStats Response = 2;
}

message GetStatsResponse {
    ErrorCode Code = 1;
    AllQuestionsWithStats Response = 2;
}

message CreateResponse {
    ErrorCode Code = 1;
    CSATQuestionFull Response = 2;
}

message UpdateResponse {
    ErrorCode Code = 1;
}

message DeleteResponse {
    ErrorCode Code = 1;
}

service CSATQuestionService {
	rpc CheckRating (NewCSATAnswerInfo) returns (CheckRatingResponse) {}
	rpc GetAll (google.protobuf.Empty) returns (GetAllResponse) {}
	rpc GetStats (google.protobuf.Empty) returns (GetStatsResponse) {}
    rpc Create (NewCSATQuestionInfo) returns (CreateResponse) {}
    rpc Update (UpdatedCSATQuestionInfo) returns (UpdateResponse) {}
    rpc Delete (CSATQuestionID) returns (DeleteResponse) {}
}
